styles/buttons.css
.btn {
  position: relative;
  display: inline-flex;
  align-items: center;
  column-gap: 8px;
  font-family: 'Outfit', sans-serif;
  font-size: 12px;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 3px;
  line-height: 22px;
  padding: 16px 32px;
  border: 1px solid transparent;
  border-radius: 32px;
  transition: all 0.3s ease;
  opacity: 0;
}

.btn:hover,
.btn-focus-visible {
  letter-spacing: 4px;
}

.btn-primary {
  color: white;
  border-color: white;
  background-color: black;
}

.btn-primary:hover,
.btn-primary:focus-visible {
  color: black;
  border-color: black;
  background-color: white;
}

.btn-outline {
  border-color: rgba(0, 0, 0, 1);
  border-color: rgba(0, 0, 0, 0.35);
  background-color: transparent;
}

.btn-outline:hover,
.btn-outline:focus-visible {
  border-color: rgba(0, 0, 0, 1);
  border-color: rgba(0, 0, 0, 1);
  background-color: transparent;
}

.external::after {
  content: '';
  display: inline-flex;
  width: 14px;
  height: 14px;
  background-image: url('../images/icons/icon_external-link.svg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: all 0.3s ease;
}

.btn.animate {
  animation: unblur 1s ease;
  animation-delay: 0.3s;
  animation-fill-mode: forwards;
}

@media (min-width: 992px) {
  .btn {
    padding: 20px 40px;
  }
}

